--- a/src/App.css
+++ b/src/App.css
@@ -1189,6 +1189,9 @@ html {
   }
 }
 @media (max-width: 600px) {
+  .non-mobile {
+    display: none;
+  }
   .contactscript {
     display: none;
   }
