--- a/src/App.css
+++ b/src/App.css
@@ -1345,3 +1345,9 @@ html {
 .intro-background-color {
   background-color: transparent;
 }
+
+* {
+  -webkit-overflow-scrolling: touch;
+  padding: env(safe-area-inset-top) env(safe-area-inset-right)
+    env(safe-area-inset-bottom) env(safe-area-inset-left);
+}
