--- a/src/App.css
+++ b/src/App.css
@@ -1350,5 +1350,7 @@ html {
 }
 
 body {
-  /* -webkit-overflow-scrolling: touch; */
+  padding: env(safe-area-inset-top) env(safe-area-inset-right)
+    env(safe-area-inset-bottom) env(safe-area-inset-left);
+  width: 100vw;
 }
