--- a/src/index.css
+++ b/src/index.css
@@ -7,11 +7,14 @@ body {
   -moz-osx-font-smoothing: grayscale;
   margin: env(safe-area-inset-top) env(safe-area-inset-right)
     env(safe-area-inset-bottom) env(safe-area-inset-left);
-  width: 100vw;
-  background-image: linear-gradient(120deg, #001842 0%, #020608 100%);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+html {
+  /* background-image: linear-gradient(120deg, #001842 0%, #020608 100%); */
+  background-color: black;
 }
