--- a/src/App.css
+++ b/src/App.css
@@ -287,12 +287,7 @@ h6 {
 
 body {
   /* background: rgb(16, 53, 93); */
-  background-image: linear-gradient(
-    140deg,
-    #012056 0%,
-    #081e45 50%,
-    #000000 100%
-  );
+  background-image: linear-gradient(140deg, #012056 0%, #000000 60%);
   color: white;
 }
 
@@ -540,6 +535,10 @@ h6 {
   justify-content: center;
   align-items: center;
   margin-top: -10px;
+}
+
+.portfolio-text {
+  margin-left: 5px;
 }
 
 .portfolio-card {
@@ -945,6 +944,8 @@ h6 {
   background-color: black;
   z-index: 100;
   float: none;
+  padding-top: 50px;
+  margin-top: -50px;
 }
 
 .navbar-component-container {
