updated style ofheadline

--- a/src/App.css
+++ b/src/App.css
@@ -723,7 +723,7 @@ h6 {
   letter-spacing: 12px;
   text-transform: uppercase;
   font-weight: 700;
-  margin-top: 30px;
+  margin-top: 20px;
   padding: 0;
   z-index: 1;
   font-size: 20px;
@@ -1070,7 +1070,7 @@ html {
   }
 
   .intro-subheading {
-    font-size: 15px;
+    font-size: 18px;
     letter-spacing: 10px;
     margin-top: -25px;
     text-shadow: 5px 5px solid black;
@@ -1156,9 +1156,10 @@ html {
   }
 
   .intro-subheading {
-    font-size: 15px;
+    font-size: 16px;
     margin-top: 0px;
     font-family: Lato;
+    letter-spacing: 7px;
   }
 
   .about-page {
@@ -1272,8 +1273,8 @@ html {
     margin-bottom: 0px;
   }
   .intro-subheading {
-    font-size: 10px;
-    letter-spacing: 0.5em;
+    font-size: 14px;
+    letter-spacing: 0.4em;
   }
 
   .intro-background-color {
@@ -1345,7 +1346,7 @@ html {
     font-size: 30px;
   }
   .intro-subheading {
-    font-size: 10px;
+    font-size: 15px;
     margin-top: 0px;
   }
 
