--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,11 @@ table td,
 table th {
   padding: 0;
 }
+
+.bottom-wordcloud {
+  display: none;
+}
+
 .c2 {
   -webkit-text-decoration-skip: none;
   font-weight: 700;
@@ -304,6 +309,7 @@ body {
 
 .WorkPanel-container {
   width: 650px;
+  margin-top: -10px;
 }
 
 .mywork-section {
@@ -864,38 +870,32 @@ h6 {
 .about-flex-grid {
   display: flex;
   justify-content: space-between;
-  width: 60vw;
+  width: 70vw;
   margin-top: 30px;
 }
 
-.about-h4-left {
+.about-h4-left,
+.about-h4-right {
   text-align: center;
   margin-top: -10px;
   margin-bottom: -40px;
   text-decoration: underline;
   font-family: Roboto;
-  color: #a4c2f4;
-}
-
-.about-h5-left {
-  text-align: center;
   line-height: 20px;
-  margin-bottom: 35px;
-  font-family: Roboto;
+
+  color: #a4c2f4;
 }
 
-.about-h4-right {
-  text-align: center;
-  margin-top: -10px;
-  margin-bottom: -45px;
+.skills-bullet {
   color: #a4c2f4;
-  text-decoration: underline;
-  font-family: Roboto;
+  font-size: 12px;
 }
+
+.about-h5-left,
 .about-h5-right {
   text-align: center;
   line-height: 20px;
-  margin-bottom: 15px;
+  margin-bottom: 35px;
   font-family: Roboto;
 }
 
@@ -1079,14 +1079,12 @@ html {
   .scottkutler {
     margin: 5px 0px 5px 0px;
   }
-  .col2 {
-    display: none;
-  }
+
   .col1 {
-    width: 30vw;
+    width: 15vw;
   }
   .col3 {
-    width: 30vw;
+    width: 15vw;
   }
   .about-page {
     margin-top: -40px;
@@ -1109,6 +1107,13 @@ html {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+  }
+
+  .about-flex-grid {
+    width: 45vw;
+  }
+  .col2 {
+    display: none;
   }
   .navbar-component-links {
     font-size: 13px;
@@ -1142,7 +1147,7 @@ html {
   }
 
   .skills-spacer {
-    margin-top: -30px;
+    margin-top: -20px;
   }
 
   .col3 {
@@ -1240,6 +1245,11 @@ html {
     width: 100vw;
   }
 }
+@media (max-width: 650px) {
+  /* .about-flex-grid { */
+  /* width: 60vw; */
+  /* } */
+}
 
 @media (max-width: 600px) {
   .SmallContact {
@@ -1247,11 +1257,40 @@ html {
     flex-direction: column;
     margin-bottom: 50px;
   }
+
+  .bottom-wordcloud {
+    width: 80vw;
+    display: flex;
+  }
+
+  .bottom-container {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    padding-bottom: 60px;
+    margin-top: -30px;
+  }
+
   .non-mobile {
     display: none;
   }
   .contactscript {
     display: none;
+  }
+
+  .about-h5-left,
+  .about-h5-right {
+    font-size: 12px;
+  }
+
+  .col1,
+  .col3 {
+    font-size: 12px;
+    width: 50vw;
+  }
+
+  .about-flex-grid {
+    width: 300px;
   }
 
   .contact-form {
@@ -1266,6 +1305,12 @@ html {
 }
 
 @media (max-width: 500px) {
+  .col1,
+  .col3 {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
   .intro-name {
     font-size: 40px;
     margin-top: 120px;
@@ -1326,11 +1371,22 @@ html {
   }
 }
 
+@media (max-width: 430px) {
+  .about-flex-grid {
+    /* width: 80vw; */
+  }
+  .about-h5-left,
+  .about-h5-right {
+    font-size: 11.5px;
+  }
+}
+
 @media (max-width: 400px) {
   .about-flex-grid {
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    width: 100vw;
   }
 
   .col1 {
@@ -1340,6 +1396,11 @@ html {
   .col3 {
     margin-right: 0;
     font-size: 9px;
+  }
+
+  .about-h4-left,
+  .about-h4-right {
+    font-size: 12.5px;
   }
 
   .intro-name {
