--- a/src/App.css
+++ b/src/App.css
@@ -84,10 +84,13 @@ table th {
 .c6 {
   padding-top: 0pt;
   padding-bottom: 0pt;
-  line-height: 1.15;
+  line-height: 1.35;
+  margin-bottom: 10px;
+  /* text-justify: off; */
+
   orphans: 2;
   widows: 2;
-  text-align: justify;
+  text-align: left;
   color: white;
 }
 .c4 {
@@ -169,6 +172,11 @@ table th {
   max-width: 432pt;
   padding: 18pt 90pt 18pt 90pt;
   color: white;
+}
+
+.c27 {
+  font-size: 20px;
+  margin-left: 7px;
 }
 .c10 {
   height: 11pt;
@@ -324,7 +332,7 @@ body {
   padding: 13px 12px 10px 12px;
   background-color: rgb(66, 66, 66);
   transition: 0.5s;
-  border-radius: 10px;
+  /* border-radius: 10px; */
   width: 350px;
   height: 275px;
   font-family: Roboto;
@@ -562,17 +570,19 @@ h6 {
 }
 
 .portfolio-image {
-  width: 350px;
+  width: 374px;
   transition: 1s;
   margin-bottom: 5px;
-  border-radius: 8px;
+  margin-top: -14px;
+  margin-left: -12px;
+  /* border-radius: 8px; */
   transition: 1s;
-  border: 1px solid rgb(37, 37, 37);
+  /* border: 1px solid rgb(37, 37, 37); */
 }
-
-.portfolio-image:hover {
-  border: 1px solid rgb(105, 105, 105);
-}
+/*  */
+/* .portfolio-image:hover { */
+/* border: 1px solid rgb(105, 105, 105); */
+/* } */
 
 .portfolio-description {
   font-style: italic;
@@ -1330,7 +1340,7 @@ html {
     padding: 5px 5px 55px 5px;
     background-color: rgb(66, 66, 66);
     transition: 0.5s;
-    border-radius: 10px;
+    /* border-radius: 10px; */
     width: 300px;
     height: 200px;
     font-family: Roboto;
@@ -1347,12 +1357,14 @@ html {
   }
 
   .portfolio-image {
-    width: 300px;
+    width: 310px;
     transition: 1s;
+    margin-left: -5px;
     margin-bottom: 5px;
-    border-radius: 8px;
+    margin-top: -5px;
+    /* border-radius: 8px; */
     transition: 1s;
-    border: 1px solid rgb(37, 37, 37);
+    /* border: 1px solid rgb(37, 37, 37); */
   }
   .portfolio-description {
     font-size: 12px;
